<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:background="#3e3e3e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/connectButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="connDisconnOnClickHandler"
            android:text="@string/connectButton"
            android:src="@drawable/ant_plus"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:contentDescription="@string/connectButton"
            android:clickable="false"
            android:background="@null"
            android:layout_margin="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/connStatusTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/connStatusMsg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/currentPulseTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/currentPulse"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/startStopButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/startStopButton"
            android:onClick="startStop"
            android:src="@drawable/record"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_margin="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/recStatusMsg"
                android:id="@+id/recStatusTextView"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/elapsTimeTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/elapsTime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reclist_label"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:lines="@android:integer/config_mediumAnimTime"
        android:singleLine="true" />

    <com.szabolcs.szijarto.sleepguard.RecordingListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recordingListView" />

</LinearLayout>
